# ulc-codec

./: CMakeLists.txt  README.md
libulc/: ulcEncoder_BlockTransform.c  ulcEncoder_WindowControl.c  ulcHelper.h
tools/: WavIO_Reader.c  WavIO_Writer.c
